--- a/src/Honey.Core/Honey.Core.csproj
+++ b/src/Honey.Core/Honey.Core.csproj
@@ -2,6 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="O9d.Json.Formatting" Version="0.1.0" />
+    </ItemGroup>
 
 </Project>
