--- a/src/Honey.Core/Honey.Core.csproj
+++ b/src/Honey.Core/Honey.Core.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0-rc.2.21480.5" />
       <PackageReference Include="O9d.Json.Formatting" Version="0.1.0" />
     </ItemGroup>
 
